[gd_scene load_steps=2 format=3 uid="uid://bhyp02lurgb04"]

[ext_resource type="Script" uid="uid://dfiakrvnw1evu" path="res://scripts/key_bind_menu.gd" id="1_os1c4"]

[node name="KeyBindMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_os1c4")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.166667
anchor_top = 0.111111
anchor_right = 0.833333
anchor_bottom = 0.888889
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Button1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="JumpButton" type="Button" parent="VBoxContainer/Button1"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
action_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/Button1/JumpButton"]
layout_mode = 2
offset_left = 239.999
offset_top = 20.0001
offset_right = 332.999
offset_bottom = 43.0001
text = "Light Attack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JumpKeyLabel" type="Label" parent="VBoxContainer/Button1/JumpButton"]
layout_mode = 2
offset_left = 927.999
offset_top = 20.0001
offset_right = 1021.0
offset_bottom = 43.0001
text = "'key'"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressAnyKeyScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.67451)

[node name="Label" type="Label" parent="PressAnyKeyScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 128
text = "PRESS ANY KEY"

[connection signal="pressed" from="VBoxContainer/Button1/JumpButton" to="." method="_on_jump_button_pressed"]
